[gd_scene load_steps=4 format=3 uid="uid://c6opgwwqcyu8k"]

[ext_resource type="Script" uid="uid://5f5tvvb2lutn" path="res://scenes/main_node.gd" id="1_brsxu"]
[ext_resource type="PackedScene" uid="uid://bwmucm45i15w4" path="res://scenes/main_scene.tscn" id="2_t1rhp"]
[ext_resource type="PackedScene" uid="uid://608a11f00jrg" path="res://scenes/af_game_menu.tscn" id="7_p3mmm"]

[node name="Main Node" type="Node"]
script = ExtResource("1_brsxu")

[node name="Main Scene" parent="." instance=ExtResource("2_t1rhp")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Game Menu" parent="CanvasLayer" instance=ExtResource("7_p3mmm")]

[connection signal="sig_change_value" from="." to="CanvasLayer/Game Menu" method="display_score"]
[connection signal="sig_choose_tool" from="CanvasLayer/Game Menu" to="." method="choose_tool"]
[connection signal="sig_end_game" from="CanvasLayer/Game Menu" to="." method="end_game"]
[connection signal="sig_exit_to_menu" from="CanvasLayer/Game Menu" to="." method="exit_to_menu"]
[connection signal="sig_interact" from="CanvasLayer/Game Menu" to="." method="pass_mouse_input"]
